feat:modify payment page

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -35,7 +35,7 @@ $grays: (
 // fusv-enable
 
 // scss-docs-start color-variables
-$blue: #0d6efd !default;
+$blue: #333333 !default; //#0d6efd
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
 $pink: #d63384 !default;
@@ -544,7 +544,7 @@ $border-radius-2xl: $border-radius-xxl !default; // Deprecated in v5.3.0
 $box-shadow: 0 .5rem 1rem rgba($black, .15) !default;
 $box-shadow-sm: 0 .125rem .25rem rgba($black, .075) !default;
 $box-shadow-lg: 0 1rem 3rem rgba($black, .175) !default;
-$box-shadow-inset: inset 0 1px 2px rgba($black, .075) !default;
+$box-shadow-inset: inset 0 0px 0px rgba($black, .075) !default; //inset 0 1px 2px rgba($black, .075)
 // scss-docs-end box-shadow-variables
 
 $component-active-color: $white !default;
