--- a/src/stylesheets/_utilities.scss
+++ b/src/stylesheets/_utilities.scss
@@ -20,6 +20,27 @@
   backdrop-filter: 'blur(1px)'
 }
 
-.no-text-decoration {
-  text-decoration: none;
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.form-control:focus {
+  border-color:lightgray;
+  webkit-box-shadow: none;
+  box-shadow: none;
+}
+
+.form-check-input:checked,:focus,:active {
+  border-color: lightgray;
+  webkit-box-shadow: none;
+  box-shadow: none;
 }
