--- a/src/stylesheets/_utilities.scss
+++ b/src/stylesheets/_utilities.scss
@@ -44,3 +44,11 @@ input[type=number] {
   webkit-box-shadow: none;
   box-shadow: none;
 }
+
+.pre-wrap {
+  white-space: pre-wrap;
+}
+
+.break-word {
+  word-wrap: break-word;
+}
