add page of articles

--- a/src/stylesheets/_utilities.scss
+++ b/src/stylesheets/_utilities.scss
@@ -6,6 +6,14 @@
   height: 200px;
 }
 
+.article-img-height {
+  height: 30rem;
+}
+
+.article-img-height-m {
+  height: 20rem;
+}
+
 .react-loading {
   position: fixed;
   top: 0;
