feat: add about page

--- a/src/stylesheets/_utilities.scss
+++ b/src/stylesheets/_utilities.scss
@@ -3,7 +3,7 @@
 }
 
 .img-height {
-  height: 200px;
+  height: 250px;
 }
 
 
@@ -13,6 +13,10 @@
 
 .product-img-height {
   height: 25rem;
+}
+
+.home-img-height {
+  height: 20rem;
 }
 
 .react-loading {
