feat: code refactor

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1489,7 +1489,7 @@ $toast-border-radius: var(--#{$prefix}border-radius) !default;
 $toast-box-shadow: var(--#{$prefix}box-shadow) !default;
 $toast-spacing: $container-padding-x !default;
 
-$toast-header-color: var(--#{$prefix}secondary-color) !default;
+$toast-header-color: var(--#{$prefix}secondary-color) !default; // var(--#{$prefix}secondary-color) !default;
 $toast-header-background-color: rgba(var(--#{$prefix}body-bg-rgb), .85) !default;
 $toast-header-border-color: $toast-border-color !default;
 // scss-docs-end toast-variables
